--- a/prctclcmmnlsp/Makefile
+++ b/prctclcmmnlsp/Makefile
@@ -7,4 +7,4 @@ PCL = ./
 
 clean:
 	rm -f $(PCL)/#*shell*# $(PCL)/*.fas  $(PCL)/*.fasl $(PCL)/*.lib \
-		$(PCL)/ch14.03.txt $(PCL)/ch14.04.txt
+		$(PCL)/data/ch14.03.txt $(PCL)/data/ch14.04.txt
