--- a/prctclcmmnlsp/Makefile
+++ b/prctclcmmnlsp/Makefile
@@ -4,12 +4,12 @@
 CFLAGS += -DDEBUG
 
 HDR  = id3.h
-OBJS = id3dump.o id3lib.o
-PROG = id3dump
+OBJS = id3dump.o id3lib.o test.id3.01.o
+PROGS = id3dump test.id3.01
 
 PCL = ./
 
-all: $(PROG)
+all: $(PROGS)
 
 id3lib.o:  id3lib.c $(HDR)
 	cc -c $(CFLAGS) id3lib.c
@@ -17,10 +17,16 @@ id3lib.o:  id3lib.c $(HDR)
 id3dump.o: id3dump.c $(HDR)
 	cc -c $(CFLAGS) id3dump.c
 
-$(PROG): $(OBJS)
-	cc -o $(PROG) $(OBJS)
+test.id3.01.o: test.id3.01.c
+	cc -c $(CLAGS) test.id3.01.c
+
+id3dump: id3dump.o id3lib.o
+	cc -o id3dump id3dump.o id3lib.o
+
+test.id3.01: test.id3.01.o id3lib.o
+	cc -o test.id3.01 test.id3.01.o id3lib.o
 
 clean:
-	rm -f $(PROG) $(OBJS)\
+	rm -f $(PROGS) $(OBJS)\
 		$(PCL)/#*shell*# $(PCL)/*.fas  $(PCL)/*.fasl $(PCL)/*.lib \
 		$(PCL)/data/ch14.03.txt $(PCL)/data/ch14.04.txt
